--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "node 01_knowledge_requirements/example.js"
+    "test": "node 01_knowledge_requirements/example.js",
+    "prepare": "husky & husky init"
   },
   "type": "module",
   "dependencies": {
     "dotenv": "^17.2.3",
+    "node-llama-cpp": "^3.14.2",
     "openai": "^6.7.0"
+  },
+  "devDependencies": {
+    "husky": "^9.1.7"
   }
 }
