--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,4 @@
 {
-  "version": 2,
-  "rewrites": [
-    {
-      "source": "/",
-      "destination": "/api/index.js"
-    }
-  ]
+  "version": 2
 }
 
